--- a/pno_ai/environment.yml
+++ b/pno_ai/environment.yml
@@ -1,4 +1,4 @@
-name: pno-ai
+name: pno_ai
 channels:
   - pytorch
   - https://repo.anaconda.com/pkgs/free
@@ -115,5 +115,5 @@ dependencies:
   - pip:
     - mido==1.2.9
     - pretty-midi==0.2.8
-prefix: /Users/nikku/miniconda3/envs/pno-ai
+prefix: /Users/nikku/miniconda3/envs/pno_ai
 
